fix(code.scss): fix code block style issues on mobile

--- a/sass/_code.scss
+++ b/sass/_code.scss
@@ -54,6 +54,10 @@ pre {
 		-webkit-user-select: none;
 		user-select: none;
 		text-align: center;
+
+		@media (max-width: 576px) {
+			min-width: 2rem;
+		}
 	}
 
 	mark {
